--- a/README.mkd
+++ b/README.mkd
@@ -2,13 +2,13 @@ Django Form wrapper for Twitter-Bootstrap
 =========================================
 http://twitter.github.com/bootstrap
 
-Installation:
--------------
+Installation
+------------
 Add to INSTALLED_APPS
 
 
-Usage:
-------
+Usage
+-----
         from bootstrap.forms import *
 
         class LoginForm(BootstrapForm):
@@ -17,8 +17,8 @@ Usage:
 
 
 
-Template Usage:
----------------
+Template Usage
+--------------
 
         <div class="row">
             <form action="/login/" method="post">
@@ -31,8 +31,8 @@ Template Usage:
         </div>
 
 
-TODO:
------
+TODO
+----
 Add field_* templates, and corresponding Widgets, for the unique Twitter
 Bootstrap UI elements:
 
@@ -42,3 +42,20 @@ Bootstrap UI elements:
 * daterange
 * optionlist
 
+
+LICENSE &amp; COPYRIGHT
+-----------------------
+
+(c) Copyright 2011, Earle Ady
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
