--- a/README.mkd
+++ b/README.mkd
@@ -31,6 +31,11 @@ Template Usage
         </div>
 
 
+Screenshot
+----------
+![Example Form](http://i.imgur.com/lJEok.png)
+
+
 TODO
 ----
 Add field_* templates, and corresponding Widgets, for the unique Twitter
