--- a/README.mkd
+++ b/README.mkd
@@ -12,6 +12,11 @@ Usage
         from bootstrap.forms import *
 
         class LoginForm(BootstrapForm):
+            class Meta:
+                layout = (
+                    Fieldset("Please Login", "username", "password", ),
+                )
+
             username = forms.CharField(max_length=100)
             password = forms.CharField(widget=forms.PasswordInput(), max_length=100)
 
